--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>コレクション展示</h1>
-  <a href="/posts/＜そのファイル名＞.md">最新投稿を見る</a>
+  <a href="posts/＜そのファイル名＞.md">最新投稿を見る</a>
 </body>
 </html>
